[project]
name = "nonebot_plugin_impact"
version = "0.11.114514"
description = "让群友们眼前一黑的nonebot2淫趴插件"
authors = [{ name = "Special-Week", email = "HuaMing27499@gmail.com" }]
dependencies = [
    "pillow>=9.1.1",
    "nonebot2>=2.0.0b5",
    "sqlalchemy>=2.0.19",
    "nonebot-adapter-onebot>=2.2.3",
    "nonebot-plugin-apscheduler>=0.1.3",
    "httpx"
]
requires-python = ">=3.8.0"
readme = "README.md"
license = { text = "MIT" }
